HW7 1. Разобраться с кодом. Done! 2. *Реализовать личные сообщения так: если клиент пишет «/w nick3 Привет», то только клиенту с ником nick3 должно прийти сообщение «Привет». Done! NW8 1. Разобраться с кодом. Done! 2. Добавить отключение неавторизованных пользователей по таймауту (120 сек. ждем после подключения клиента. Если он не авторизовался за это время, закрываем соединение) Done!